# sentinel-hybrid-stack

./: LICENSE  PUBLIC_RELEASE_AUDIT.md  README.md  pyproject.toml
docs/: REGULATED_ASSET_AI_ADAPTER.md
examples/: synthetic_decision_receipt.json  synthetic_transfer_event.json  walkthrough.py
schemas/: ai_decision_receipt.schema.json  kyc_attestation.schema.json  oracle_signal.schema.json  regulated_asset_event.schema.json
src/sentinel_hybrid_stack/: __init__.py  codons.py  features.py  gate.py  scorer.py  ssm.py
tests/: test_features.py  test_gate.py  test_ssm.py
